CMAKE_MINIMUM_REQUIRED(VERSION 3.10.0)

ADD_LIBRARY(simpletpl SimpleTpl.hpp SimpleTpl.cpp)

INSTALL(
  TARGETS simpletpl
  RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
  LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
  ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
  )

INSTALL(
  FILES SimpleTpl.hpp
  DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
  )
